--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
   color: #61dafb;
 }
 
-@keyframes shake {
+/* @keyframes shake {
 
   10%, 90% {
     transform: translate3d(-1px, 0, 0);
@@ -54,4 +54,4 @@
   40%, 60% {
     transform: translate3d(4px, 0, 0);
   }
-}
+} */
