--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,20 @@
-.App {
+.correct-answer {
+  border: 3px solid rgb(6, 240, 15);
+}
+
+.wrong-answer {
+  border: 3px solid red;
+}
+
+
+
+
+
+
+
+
+
+/* .App {
   text-align: center;
 }
 
@@ -54,4 +70,6 @@
   40%, 60% {
     transform: translate3d(4px, 0, 0);
   }
-}
+} */
+
+
