--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -78,6 +78,25 @@ body {
   cursor: not-allowed;
 }
 
+.login > .btnSettings {
+  background-color: rgba(0, 0, 0, 0);
+  padding: 0;
+  margin: 0;
+  width: auto;
+  height: 35px;
+  float: right;
+}
+
+.login > .btnSettings:hover {
+  animation: wawes 2s infinite linear;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+img {
+  padding: 0;
+  margin: 0;
+}
+
 @keyframes wawes {
 
   from {
