--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,14 @@
   border: 1px solid green;
 }
 
+#correct-answer {
+  border: 3px solid rgb(6, 240, 15);
+}
+
+#wrong-answer-0, #wrong-answer-1, #wrong-answer-2 {
+  border: 3px solid rgb(255, 0, 0)
+}
+
 @media ( prefers-reduced-motion : no-preference ) {
 
   .App-logo {
