--- a/src/App.css
+++ b/src/App.css
@@ -15,12 +15,12 @@
   border: 1px solid green;
 }
 
-#correct-answer {
+.correct-answer {
   border: 3px solid rgb(6, 240, 15);
 }
 
-#wrong-answer-0, #wrong-answer-1, #wrong-answer-2 {
-  border: 3px solid rgb(255, 0, 0)
+.wrong-answer-0, .wrong-answer-1, .wrong-answer-2 {
+  border: 3px solid red;
 }
 
 @media ( prefers-reduced-motion : no-preference ) {
