--- a/src/styles/styles.global.css
+++ b/src/styles/styles.global.css
@@ -1,23 +1,31 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 :root {
+
   --white: white;
 
   --gray-50: rgb(247, 248, 250);
+
   --gray-100: rgb(230, 232, 235);
+
   --gray-200: rgb(175, 178, 177);
-  --gray-500: rgb(128, 128, 128);
+
+  --gray-500: grey;
+
   --gray-800: rgb(73, 77, 75);
 
   --green-500: rgb(4, 211, 97);
-  
+
   --purple-300: rgb(159, 117, 255);
-  --purple-400: rgb(145, 100, 250); 
+
+  --purple-400: rgb(145, 100, 250);
+
   --purple-500: rgb(130, 87, 229);
+
   --purple-800: rgb(111, 72, 201);
 }
 
