feat: req7 em andamento, falta implementar a lógica no TrueFalse

--- a/src/components/Alternatives.css
+++ b/src/components/Alternatives.css
@@ -14,3 +14,11 @@
 .answers button:hover {
   background-color: rgb(90, 207, 141);
 }
+
+.show[data-testid="correct-answer"] {
+  border: 3px solid rgb(6, 240, 15);
+}
+
+.show[data-testid="wrong-answer"] {
+  border: 3px solid rgb(255, 0, 0);
+}
