--- a/src/styles/question.css
+++ b/src/styles/question.css
@@ -20,7 +20,7 @@
   border: 3px solid;
   border-radius: 50px;
   font-size: x-large;
-  padding: 30px 30px;
+  padding: 30px;
   position: absolute;
   top: 300px;
 }
@@ -30,48 +30,51 @@
   border: 3px solid;
   border-radius: 50px;
   font-size: x-large;
-  padding: 30px 30px;
+  padding: 30px;
   position: absolute;
   top: 300px;
 }
 
 .timer::before {
-  content: '';
-  border-radius: 1000px;
-  min-width: calc(300px + 12px);
-  min-height: calc(60px + 12px);
   border: 6px solid #00FFCB;
+  border-radius: 1000px;
   box-shadow: 0 0 60px rgba(0,255,203,.64);
+  content: '';
+  left: 50%;
+  min-height: calc(60px + 12px);
+  min-width: calc(300px + 12px);
+  opacity: 0;
   position: absolute;
   top: 50%;
-  left: 50%;
   transform: translate(-50%, -50%);
-  opacity: 0;
   transition: all .3s ease-in-out 0s;
 }
 
 .timer::after {
-  content: '';
-  width: 30px; height: 30px;
-  border-radius: 100%;
-  border: 6px solid red;
-  position: absolute;
-  z-index: -1;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   animation: ring 1s infinite;
+  border: 6px solid red;
+  border-radius: 100%;
+  content: '';
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 30px; height: 30px;
+  z-index: -1;
 }
 
 @keyframes ring {
+
   0% {
-    width: 30px;
     height: 30px;
     opacity: 1;
+    width: 30px;
   }
+
   100% {
-    width: 200px;
     height: 200px;
     opacity: 0;
+    width: 200px;
   }
+
 }
