--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -71,7 +71,7 @@ body {
   display: flex;
 }
 
-.btn-content input, button {
+.btn-content :first-child {
   align-items: center;
   display: flex;
   font-size: medium;
@@ -81,10 +81,33 @@ body {
   width: 120px;
 }
 
+.btn-content :last-child:hover {
+  box-shadow: 2px 4px 10px rgb(255, 255, 255);
+}
+
 .btnPlay {
   background-color: #467c96;
   border: none;
   border-radius: 5px;
   box-shadow: 1px 3px 10px black;
   color: white;
+}
+
+.btnPlay:hover {
+  box-shadow: 2px 4px 10px rgb(255, 255, 255);
+}
+
+.btnConfig {
+  align-items: center;
+  background-color: #467c96;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 1px 3px 10px black;
+  color: white;
+  display: flex;
+  font-size: medium;
+  height: 50px;
+  justify-content: center;
+  margin: 0 20px;
+  width: 120px;
 }
