--- a/src/styles/question.css
+++ b/src/styles/question.css
@@ -1,8 +1,7 @@
 .question-content {
   align-items: center;
   display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
+  flex-flow: column wrap;
   text-align: center;
   width: 50%;
 }
@@ -10,7 +9,6 @@
 .options-content {
   align-items: center;
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
   width: 79%;
 }
@@ -36,9 +34,9 @@
 }
 
 .timer::before {
-  border: 6px solid #00FFCB;
+  border: 6px solid #00ffcb;
   border-radius: 1000px;
-  box-shadow: 0 0 60px rgba(0,255,203,.64);
+  box-shadow: 0 0 60px rgba(0, 255, 203, 0.64);
   content: '';
   left: 50%;
   min-height: calc(60px + 12px);
@@ -46,7 +44,7 @@
   opacity: 0;
   position: absolute;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50% , -50%);
   transition: all .3s ease-in-out 0s;
 }
 
@@ -56,11 +54,13 @@
   border-radius: 100%;
   content: '';
   left: 50%;
+  height: 30px;
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 30px; height: 30px;
+  width: 30px;
   z-index: -1;
+
 }
 
 @keyframes ring {
