--- a/src/styles/question.css
+++ b/src/styles/question.css
@@ -2,6 +2,7 @@
   align-items: center;
   display: flex;
   flex-flow: column wrap;
+  padding: 10px 10px 30px;
   text-align: center;
   width: 50%;
 }
@@ -33,7 +34,7 @@
   top: 300px;
 }
 
-.timer::before {
+.timer:before {
   border: 6px solid #00ffcb;
   border-radius: 1000px;
   box-shadow: 0 0 60px rgba(0, 255, 203, 0.64);
@@ -43,18 +44,18 @@
   min-width: calc(300px + 12px);
   opacity: 0;
   position: absolute;
-  top: 50%;
-  transform: translate(-50% , -50%);
+  top: 50% ;
+  /* transform: translate(-50%, -50%); */
   transition: all .3s ease-in-out 0s;
 }
 
-.timer::after {
+.timer:after {
   animation: ring 1s infinite;
   border: 6px solid red;
   border-radius: 100%;
   content: '';
-  left: 50%;
   height: 30px;
+  left: 50%;
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
