--- a/src/styles/question.css
+++ b/src/styles/question.css
@@ -45,8 +45,7 @@
   opacity: 0;
   position: absolute;
   top: 50% ;
-  /* transform: translate(-50%, -50%); */
-  transition: all .3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
 }
 
 .timer:after {
