--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,11 @@
   pointer-events: none;
 }
 
-.red-border {
+.red {
   border: 1px solid red;
 }
 
-.green-border {
+.green {
   border: 1px solid green;
 }
 
