--- a/src/pages/GamePlay.css
+++ b/src/pages/GamePlay.css
@@ -5,3 +5,11 @@
 .show-btn {
   visibility: visible;
 }
+
+.correct {
+  border: 3px solid rgb(6, 240, 15);
+}
+
+.wrong {
+  border: 3px solid rgb(255, 0, 0);
+}
