--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,11 @@
 }
 
 .green {
-  border: 3px solid rgb(6, 240, 15)
+  border: 3px solid green;
 }
 
 .red {
-  border: 3px solid rgb(255, 0, 0)
+  border: 3px solid red;
 }
 
 @media ( prefers-reduced-motion : no-preference ) {
