--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 }
 
 .red {
-  border: 3px solid rgb(255, 0, 0);
+  border: 3px solid red;
 }
 
 @media ( prefers-reduced-motion : no-preference ) {
