--- a/src/styles/styles.global.css
+++ b/src/styles/styles.global.css
@@ -4,29 +4,36 @@
   padding: 0;
 }
 
+img {
+  display: block;
+  margin: 0;
+  max-width: 100%;
+  padding: 0;
+}
+
 :root {
 
   --white: white;
 
-  --gray-50: rgb(247, 248, 250);
+  --gray-50: rgb(247, 248, 250); /* #f7f8fa */
 
-  --gray-100: rgb(230, 232, 235);
+  --gray-100: rgb(230, 232, 235); /* #e6e8eb */
 
-  --gray-200: rgb(175, 178, 177);
+  --gray-200: rgb(175, 178, 177); /* #afb2b1 */
 
   --gray-500: grey;
 
   --gray-800: rgb(73, 77, 75);
 
-  --green-500: rgb(4, 211, 97);
+  --green-500: rgb(4, 211, 97); /* #04d361 */
 
-  --purple-300: rgb(159, 117, 255);
+  --purple-300: rgb(159, 117, 255); /* #9f75ff */
 
   --purple-400: rgb(145, 100, 250);
 
   --purple-500: rgb(130, 87, 229);
 
-  --purple-800: rgb(111, 72, 201);
+  --purple-800: rgb(111, 72, 201); /* #6f48c9 */
 }
 
 body {
