--- a/src/Componentes/playGame.css
+++ b/src/Componentes/playGame.css
@@ -1,7 +1,7 @@
 .red {
-  background-color: red;
+  border: 3px solid rgb(255, 0, 0);
 }
 
 .green {
-    background-color: green;
+    border: 3px solid rgb(6, 240, 15);
 }
