--- a/src/styles/Game.css
+++ b/src/styles/Game.css
@@ -1,7 +1,15 @@
 .wrongAnswer {
-  border: 3px solid red;
+  border: 3px solid rgb(255, 0, 0);
 }
 
 .correctAnswer {
   border: 3px solid rgb(6, 240, 15);
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+.visible {
+  visibility: visible;
 }
