--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -1,4 +1,4 @@
-.main-settings{
+.main-settings {
   align-items: center;
   color: white;
   display: flex;
@@ -7,13 +7,13 @@
   justify-content: space-evenly;
 }
 
-.title-settings{
+.title-settings {
   background-color: #3a2d88;
   text-align: center;
   width: 100%;
 }
 
-.form-settings{
+.form-settings {
   align-items: stretch;
   display: flex;
   flex-direction: column;
@@ -32,11 +32,7 @@
   padding: 10px;
 }
 
-.form-settings :first-child:hover {
-  box-shadow: 2px 5px 20px white;
-}
-
-.form-settings :nth-child(2) {
+.form-settings :nth-child( 2 ) {
   background-color: #3a2d88;
   border: none;
   border-radius: 3px;
@@ -46,10 +42,6 @@
   font-weight: 600;
   margin: 10px 0;
   padding: 10px;
-}
-
-.form-settings :nth-child(2):hover {
-  box-shadow: 2px 5px 20px white;
 }
 
 .form-settings :last-child {
@@ -64,6 +56,14 @@
   padding: 10px;
 }
 
+.form-settings :nth-child( 2 ):hover {
+  box-shadow: 2px 5px 20px white;
+}
+
+.form-settings :first-child:hover {
+  box-shadow: 2px 5px 20px white;
+}
+
 .form-settings :last-child:hover {
   box-shadow: 2px 5px 20px white;
 }
@@ -74,7 +74,7 @@
   border-radius: 3px;
   box-shadow: 2px 3px 10px black;
   color: white;
-  font-family: 'Roboto';
+  font-family: sans-serif;
   font-size: x-large;
   font-weight: 600;
   height: 5vh;
