--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
-  background-color: #282c34;
+  background:linear-gradient(45deg, #000000, #36056e );
   color: white;
+  height: 100vh;
 }
 
 .App {
@@ -13,6 +14,7 @@ body {
 .App-logo {
   pointer-events: none;
   width: 75vw;
+  max-width: 500px;
 }
 
 .red-border {
@@ -26,16 +28,17 @@ body {
 @media ( prefers-reduced-motion : no-preference ) {
 
   .App-logo {
-    animation: shake infinite 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+    animation: shake infinite 1s cubic-bezier(0.5, 1, 0, 1) both;
   }
 }
 
 .App-header {
+  position: absolute;
   align-items: center;
   display: flex;
   flex-direction: column;
   font-size: calc(10px + 2vmin);
-  height: 50vh;
+  top: 100px;
   justify-content: center;
 }
 
