--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -1,8 +1,18 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 form {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 300px;
+  position: absolute;
+  top: 300px;
+  width: 50%;
+  max-width: 300px;
+  margin-top: 40px;
+
 }
 
 form label {
@@ -35,4 +45,22 @@ button:disabled {
   font-size: 0.8rem;
   margin-top: 25px;
   text-decoration: none;
+}
+
+.config{
+  position: absolute;
+  width: 35px;
+  height: 35px;
+  top: 1%;
+  left: 90%;
+  background: transparent;
+  border: none;
+}
+
+.engrenagem{
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 3px;
+  left: 3px;
 }
