--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap') ;
 
 body {
-  font-family: Roboto, sans-serif;
+  font-family: Roboto , sans-serif;
 }
 
 .badge {
@@ -13,7 +13,7 @@ body {
 }
 
 .bold {
-  font-weight: bold;
+  font-weight: 700;
 }
 
 .btn-config {
