--- a/src/styles/question.css
+++ b/src/styles/question.css
@@ -5,3 +5,56 @@
 .wrong-selected {
   border: 3px solid red;
 }
+
+/* Contener questao */
+.question-card {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  width: 50%;
+}
+
+.question-card h3 {
+  text-align: center;
+}
+
+.question-card p {
+  text-align: center;
+}
+
+/* Class button */
+.question-btn {
+  background-color: var(--purple-color-600);
+  border-radius: 10px;
+  color: var(--cream-color-400);
+  cursor: pointer;
+  font-size: 18px;
+  line-height: 50px;
+  transition: transform 0.4s;
+}
+
+.question-btn:hover {
+  transform: scale(1.05);
+}
+
+.no-color {
+  border: none;
+}
+
+.next-question-bnt {
+  background-color: var(--purple-color-800);
+  border: none;
+  border-radius: 10px;
+  color: var(--cream-color-400);
+  cursor: pointer;
+  font-size: 1.1rem;
+  margin: 0 auto;
+  opacity: 0.8;
+  padding: 10px;
+  transition: 0.5s;
+  width: 50%;
+}
+
+.next-question-bnt:hover {
+  opacity: 1;
+}
