--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,5 @@
 :root {
+
   --cream-color-400: rgb(243, 234, 192);
 
   --purple-color-800: rgb(93, 55, 109);
@@ -8,7 +9,7 @@
   --text-color-black-800: rgb(29, 29, 29);
 
   --text-color-black-600: rgb(51, 51, 51);
-  
+
   --text-color-black-400: rgb(102, 102, 102);
 }
 
@@ -20,5 +21,5 @@
 
 body {
   background-color: rgb(243, 243, 243);
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins" sans-serif;
 }
