--- a/src/global.css
+++ b/src/global.css
@@ -21,5 +21,5 @@
 
 body {
   background-color: rgb(243, 243, 243);
-  font-family: "Poppins" , sans-serif;
+  font-family: 'Poppins' , sans-serif;
 }
