--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,40 @@
   border: 3px solid red;
 }
 
+.inputs {
+  padding-top: 10em;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 100vw;
+ }
+
+.label-input {
+  display: flex;
+}
+
+.Logo {
+  width: 50px;
+  height: 50px;
+}
+
+.btn2 {
+  display: flex;
+  justify-content: space-around;
+}
+
+.jogo {
+  width: 960px;
+  padding: 30px;
+  
+}
+
+.feedback {
+  width: 960px;
+  padding: 30px;
+}
+
 /* .App {
   text-align: center;
 }
