--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,11 @@
   border: 1px solid red;
 }
 
-.green-border {
-  border: 1px solid green;
+.login-body {
+  width: 100%;
+  height: 100%;
 }
+
 
 @media ( prefers-reduced-motion : no-preference ) {
 
@@ -55,3 +57,4 @@
     transform: translate3d(4px, 0, 0);
   }
 }
+
