--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -3,6 +3,14 @@ html {
   text-align: center;
 }
 
+.score {
+  border: 1px solid black;
+  border-radius: 10%;
+  padding: 0 10px;
+  margin: 5px auto;
+  width: fit-content;
+}
+
 .gravatar {
   border-radius: 50%;
 }
