--- a/src/App.css
+++ b/src/App.css
@@ -1,57 +1,64 @@
-.App {
+@import "https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma-rtl.min.css";
+
+
+html {
+  background-color: #FAD06C;
+}
+
+.header {
+  background-color: #01133f;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 30px;
+}
+
+.header img {
+  border-radius: 50%;
+  width: 100px;
+}
+
+.header-user-info {
   text-align: center;
+  text-shadow: 2px 2px #544b35;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header-user-info p {
+  color: #f7dfa6; 
 }
 
-.red-border {
-  border: 1px solid red;
-}
-
-.green-border {
-  border: 1px solid green;
-}
-
-@media ( prefers-reduced-motion : no-preference ) {
-
-  .App-logo {
-    animation: shake infinite 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
-  }
-}
-
-.App-header {
+.time-conteiner {
   align-items: center;
-  background-color: #282c34;
-  color: white;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.time-conteiner h1 {
+  background-color: #bb9950;
+  border-radius: 50%;
+  color: #8c733b; 
+  align-items: center;
+  display: flex;
+  height: 60px;
+  justify-content: center;
+  margin: 20px;
+  text-align: center;
+  width: 60px;
+}
+
+.question-box {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.card-header {
   display: flex;
   flex-direction: column;
-  font-size: calc(10px + 2vmin);
-  justify-content: center;
-  min-height: 100vh;
+  align-items: flex-end;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes shake {
-
-  10%, 90% {
-    transform: translate3d(-1px, 0, 0);
-  }
-
-  20%, 80% {
-    transform: translate3d(2px, 0, 0);
-  }
-
-  30%, 50%, 70% {
-    transform: translate3d(-4px, 0, 0);
-  }
-
-  40%, 60% {
-    transform: translate3d(4px, 0, 0);
-  }
+.button-conteiner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
