--- a/src/CSS/Login.css
+++ b/src/CSS/Login.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(0, 41, 98);
+  background-color: #007AC3;
   font-family: Montserrat , sans-serif;
 }
 
@@ -8,11 +8,11 @@ fieldset {
   border: none;
   border-radius: 8px;
   display: flex;
-  height: 200px;
+  height: 300px;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 20%;
+  margin-top: 10%;
   padding: 15px;
   width: 250px;
 }
@@ -41,7 +41,8 @@ input {
   height: 35px;
   margin: auto;
   padding: 3px;
-  width: 90%;
+  width: 80%;
+  cursor: pointer;
 }
 
 .btn-config {
