--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,66 @@
-.buttonYellow {
-  border-radius: 5px;
-  color: darkgoldenrod;
+body {
+  background-color: rgb(0, 0, 0);
+  font-family: Pixel Sans Serif;
+  color: rgb(255, 255, 255);
+  font-size: 4;
+  letter-spacing: 5px;
 }
+
+button {
+  border-radius: 5px;
+  background-color: rgb(255,255,0);
+  color: rgb(0, 0, 0);
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-family: Pixel Sans Serif;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+input {
+  font-family: Pixel Sans Serif;
+  letter-spacing: 2px;
+  color: rgb(255, 255, 255);
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  background-color: rgb(0, 0, 0);
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+a:link, a:visited {
+  text-decoration: none;
+  font-family: Pixel Sans Serif;
+  background-color: rgb(255,255,0);
+  padding: 5px;
+  color: rgb(0, 0, 0);
+  font-size: 4;
+  border-radius: 5px;
+  letter-spacing: 5px;
+}
+
+.wrongAndDisable {
+  border-radius: 5px;
+  background-color: rgb(136,88,24);
+  color: rgb(0, 0, 0);
+}
+
+ :disabled {
+  border-radius: 5px;
+  background-color: rgb(136,88,24);
+  color: rgb(0, 0, 0);
+ }
+
+ #play:disabled {
+  border-radius: 5px;
+  background-color: rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
+  visibility: hidden;
+ }
 
 .App {
   text-align: center;
