--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -4,9 +4,11 @@ html {
 }
 
 .score {
-  border: 1px solid black;
-  border-radius: 10%;
-  padding: 0 10px;
+  background-color: #407d6c;
+  color: #fff;
+  border-radius: 10px;
+  box-shadow: 5px 10px 10px #02809033;
+  padding: 2px 10px;
   margin: 5px auto;
   width: fit-content;
 }
