--- a/src/index.css
+++ b/src/index.css
@@ -12,13 +12,6 @@ code {
     monospace;
 }
 
-.root {
-  margin: auto;
-  width: fit-content;
-  border: 1px solid black;
-  border-radius: 10%;
-}
-
 button {
   margin: 10px;
   padding: 10px;
@@ -43,4 +36,14 @@ select {
   margin: 15px -10px;
   padding: 10px;
   width: 100%;
+}
+
+.game-conteiner {
+  background-color: #f3f3f3;
+  border-radius: 10px;
+  box-shadow: 5px 10px 10px #02809033;
+  overflow: hidden;
+  margin: auto;
+  padding: 40px 30px 30px;
+  width: fit-content;
 }
