--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,78 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap') ;
+@import url('~bootstrap-icons/font/bootstrap-icons.css') ;
+
+:root {
+
+  --color-primary: #204056;
+  --color-primary-hover: #20405699;
+  --color-secondary: #F65A5B;
+  --color-secondary-hover: #F65A5BCC;
+  --color-white: #FFFFFFDD;
+  --color-white-hover: #FFFFFF99;
+}
+
+* {
+  box-sizing: border-box;
+}
 
 body {
   font-family: Roboto , sans-serif;
   overflow: hidden;
+  background-color: var(--color-primary);
+}
+
+.container {
+  max-width: 980px;
+  padding: 0 16px;
+  margin: 0 auto;
+}
+
+.login-container {
+  height: 100vh;
+  padding: 32px;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+}
+
+.login-container form {
+  max-width: 600px;
+  padding: 48px 64px;
+  background-color: var(--color-secondary);
+  /*border: 2px solid var(--color-white);*/
+  border-radius: 16px;
+  align-self: center;
+}
+
+.login-container form input {
+  width: 300px;
+}
+
+.login-container button:first-child {
+  position: absolute;
+  top: 32px;
+  right: 32px;
+}
+
+.box-settings {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+}
+
+.box-form {
+  width: 100%;
+  max-width: 400px;
+  padding: 32px 64px;
+  border: 1px solid var(--color-white);
+  border-radius: 8px;
+  background-color: var(--color-primary);
+}
+
+.trivia-logo {
+  max-width: 200px;
+  margin: 0 auto 16px auto;
+  display: flex;
 }
 
 .badge {
@@ -22,7 +92,7 @@ body {
 }
 
 .btn-error {
-  border: 10;
+  border: 10px;
   border-radius: 5px;
   font-weight: 800;
   height: 40px;
