--- a/src/pages/login.module.css
+++ b/src/pages/login.module.css
@@ -1,6 +1,8 @@
 .login_container {
+  color: var(--blue-dark);
   display: flex;
   flex-direction: column;
+  font-family: var(--font-secondary);
   margin: 0 auto;
   max-height: 768px;
   max-width: 1300px;
@@ -26,9 +28,15 @@
 }
 
 .login__form button {
-  background-color: var(--purple-800);
-  color: var(--white);
+  background-color: var(--yellow);
+  border: 3px solid var(--blue-dark);
+  border-radius: 8px;
+  box-shadow: 2px 2px 1px 2px var(--blue-dark);
+  color: var(--blue-dark);
+  cursor: pointer;
+  font-family: var(--font-secondary);
   font-size: 1.5em;
+  font-weight: 600;
   padding: 0.675rem;
   width: 50vw;
 }
@@ -38,10 +46,22 @@
   border: none;
 }
 
+.login__form button:hover {
+  box-shadow: 4px 6px 1px 4px var(--blue-dark);
+  opacity: 0.6;
+}
+
 .login_title {
-  color: var(--purple-800);
-  font-size: 2em;
+  color: var(--red);
+  font-family: var(--font-primary);
+  font-size: 4rem;
+  margin-bottom: 4rem;
   margin-top: 4rem;
+  text-align: center;
+}
+
+.login_paragraph {
+  font-size: 1.5rem;
   text-align: center;
 }
 
@@ -60,8 +80,22 @@
 }
 
 .login__form input {
+  border: 3px solid var(--blue-dark);
+  border-radius: 8px;
+  box-shadow: 1px 1px 3px 1px var(--blue-dark);
+  font-family: var(--font-secondary);
   font-size: 1.5em;
+  margin-bottom: 7px;
   padding: 0.675rem;
   width: 50vw;
 }
 
+.login__form input:hover {
+  box-shadow: 4px 6px 1px 4px var(--blue-dark);
+}
+
+.login_footer {
+  margin-top: 200px;
+  max-width: 1300px;
+  text-align: center;
+}
