--- a/src/pages/feedback.module.css
+++ b/src/pages/feedback.module.css
@@ -1,3 +1,21 @@
+.feedback_title {
+  color: var(--red);
+  font-family: var(--font-primary);
+  font-size: 3em;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.feedback_title:after {
+  background: var(--yellow);
+  content: '';
+  display: block;
+  height: 4px;
+  margin: 0 auto;
+  text-align: center;
+  width: 80px;
+}
+
 .feedback_container {
   border: 4px solid var(--yellow);
   box-shadow: 1px 1px 2px 2px var(--blue-dark);
