--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,37 @@ body {
   padding: 0 16px;
 }
 
+header {
+  margin: 0 0 16px;
+  padding: 16px 0;
+  width: 100%;
+}
+
+header .container {
+  align-items: center;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  padding: 0;
+}
+
+header img {
+  max-width: 200px;
+}
+
+header .box-score {
+  background-color: var(--color-white);
+  border-radius: 12px;
+  box-shadow: 0 0 8px rgba(0 0 0 0.5);
+  display: flex;
+  padding: 8px 16px;
+}
+
+header .box-score img {
+  border-radius: 50%;
+  margin-right: 16px;
+}
+
 .login-container h1 {
   color: var(--color-secondary);
   font-size: 2rem;
@@ -93,29 +124,10 @@ body {
   font-weight: 700;
 }
 
-.box-settings {
-  position: absolute;
-  right: 16px;
-  top: 16px;
-}
-
-.box-form {
-  background-color: var(--color-primary);
-  border: 1px solid var(--color-white);
-  border-radius: 8px;
-  max-width: 400px;
-  padding: 32px 64px;
-  width: 100%;
-}
-
 .trivia-logo {
   display: flex;
   margin: 0 auto 16px;
   max-width: 200px;
-}
-
-.badge {
-  text-align: left;
 }
 
 .flex-block {
