--- a/src/styles/config.css
+++ b/src/styles/config.css
@@ -55,12 +55,12 @@
   color: rgb(88, 88, 88);
 }
 
-a {
+.linkConfig {
   color: white;
   text-decoration: none;
 }
 
-.labelDificcult {
+.labelDifficult {
   color: white;
   font-family: monospace;
   font-size: 20px;
