--- a/src/styles/config.css
+++ b/src/styles/config.css
@@ -1,3 +1,7 @@
+body {
+  background-color: rgb(223, 132, 223);
+}
+
 .labelCategorys {
   color: white;
   font-family: monospace;
@@ -16,7 +20,7 @@
   align-items: center;
   background: linear-gradient(rgb(76, 76, 161), rgb(68, 0, 253));
   border-radius: 10px;
-  box-shadow: 4px 4px 4px 4px gray;
+  box-shadow: 4px 4px 4px 4px rgb(42, 42, 42);
   display: flex;
   flex-direction: column;
   height: 800px;
