--- a/src/App.css
+++ b/src/App.css
@@ -123,12 +123,26 @@ header .box-score img {
   padding: 32px 64px;
 }
 
+.box-accent h2 {
+  margin: 0;
+  padding: 0 8px 8px 0;
+}
+
 .box-accent h2, .box-accent p {
   color: var(--color-white);
 }
 
 .box-accent p {
   font-weight: 700;
+}
+
+.box-question-opt {
+  display: flex;
+}
+
+.box-question-opt .exact {
+  margin: 16px 8px 16px 0;
+  text-transform: capitalize;
 }
 
 .trivia-logo {
@@ -168,4 +182,15 @@ header .box-score img {
   background-size: contain;
   height: 700px;
   width: 700px;
+}
+
+@keyframes countdown {
+
+  from {
+    stroke-dashoffset: 0;
+  }
+
+  to {
+    stroke-dashoffset: 113px;
+  }
 }
