finalizaçao do CSS

--- a/src/pages/Jogo.css
+++ b/src/pages/Jogo.css
@@ -3,7 +3,13 @@ header {
   justify-content: space-between;
 }
 
+.game-container {
+  background-color: white;
+  height: 100vh;
+}
+
 .header {
+  color: white;
   display: flex;
   justify-content: space-between;
   padding: 20px;
