--- a/src/components/Alternatives.css
+++ b/src/components/Alternatives.css
@@ -1,22 +1,18 @@
-* {
-  overflow-x: hidden;
-}
-
 .btn-answer {
-  background-color: #c71b04;
-  border-radius: 3px;
-  color: white;
+  background-color: white;
+  border-radius: 15px;
+  color: black;
   cursor: pointer;
   font-size: 20px;
   font-weight: 600;
-  height: 40px;
+  height: 60px;
   margin-left: 10px;
   margin-top: 10px;
-  width: 250px;
+  width: 320px;
 }
 
 .btn-answer:hover {
-  background-color: rgb(90, 207, 141);
+  background-color: rgb(6, 240, 15);
 }
 
 .btn-answer:disabled {
@@ -34,6 +30,11 @@
   margin-left: 10px;
   margin-top: 10px;
   width: 250px;
+}
+
+
+.button-next:hover {
+  background-color: #4099c2;
 }
 
 .show[ data-testid = 'correct-answer' ] {
