--- a/src/pages/Ranking.css
+++ b/src/pages/Ranking.css
@@ -17,6 +17,25 @@ h1 {
   width: auto;
 }
 
+.title-ranking {
+  align-items: center;
+  display: flex;
+  font-size: 30px;
+  font-weight: 800;
+  justify-content: space-around;
+  list-style: none;
+}
+
+.user-data {
+  display: flex;
+}
+
+.user-data img {
+  background-color: rgb(28, 138, 73);
+  padding-left: 30px;
+  width: 120px;
+}
+
 .ranking-list {
   align-content: flex-start;
   align-items: center;
@@ -24,8 +43,9 @@ h1 {
   border-radius: 50px;
   color: black;
   display: flex;
+  font-size: 30px;
   height: 180px;
-  justify-content: fl;
+  justify-content: space-around;
   margin: 20px auto;
   padding: 50px;
   width: 90%;
