--- a/src/Style/login.css
+++ b/src/Style/login.css
@@ -2,7 +2,6 @@ body {
   background-color: rgb(56, 50, 50);
 }
 
-
 .btn {
   background-color: rgb(53, 56, 50);
   border: 1px solid rgb(56, 179, 62);
@@ -11,24 +10,23 @@ body {
   margin-left: 60px;
   margin-top: 20px;
   padding: 30px;
-  }
+}
 
-button:disabled,
-button:hover {
-   background-color: rgb(57, 65, 49);
+button:disabled, button:hover {
+  background-color: rgb(57, 65, 49);
   color:rgb(56, 179, 62);
-  }
+}
 
 .btn-link {
   background-color: white;
   text-decoration: none;
-  }
-  
+}
+
 .home-btn {
   background-color: whitesmoke;
-   padding: 0.5%;
+  padding: 0.5%;
 }
-  
+
 .home-btn :link {
   text-decoration: none;
 }
